ajuste para rodar o mongo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 #mongodb
-spring.data.mongodb.uri=mongodb://localhost:27017/local
+#spring.data.mongodb.uri=mongodb://localhost:27017/local
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=isa-db
+
+
+spring.main.allow-bean-definition-overriding=true
