Ajustes para que a aplicação suba

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=isa-db
+spring.data.mongodb.database=local
 
 
 spring.main.allow-bean-definition-overriding=true
